--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Laberinto Móvil Mejorado</title>
+<title>Laberinto Móvil XL</title>
 <style>
-body { margin:0; font-family:sans-serif; display:flex; flex-direction:column; align-items:center; }
-canvas { background:#eee; display:block; margin:10px 0; border:2px solid #333; touch-action:none; }
-#controls { display:grid; grid-template-columns: repeat(3, 60px); gap:5px; justify-content:center; margin-bottom:10px; }
-button { font-size:20px; padding:8px; border-radius:6px; }
-#info { font-size:18px; margin-bottom:10px; text-align:center; }
+body { margin:0; font-family:sans-serif; display:flex; flex-direction:column; align-items:center; background:#f0f0f0; }
+canvas { background:#eee; display:block; margin:10px 0; border:2px solid #333; }
+#info { font-size:18px; margin-bottom:5px; text-align:center; }
 #upload { display:flex; flex-wrap:wrap; gap:10px; justify-content:center; margin-bottom:10px; }
+#controls { display:flex; justify-content:center; gap:10px; margin-top:10px; }
+button { font-size:18px; padding:8px 12px; border-radius:6px; }
+.control-btns { display:grid; grid-template-columns: repeat(3, 60px); gap:5px; }
 </style>
 </head>
 <body>
-<h1>Laberinto Móvil Mejorado</h1>
+<h1>Laberinto XL</h1>
 
 <div id="upload">
   <label>Jugador: <input type="file" id="playerUpload" accept="image/*"></label>
@@ -34,17 +35,19 @@ button { font-size:20px; padding:8px; border-radius:6px; }
 <canvas id="game"></canvas>
 
 <div id="controls">
-  <div></div><button id="up">↑</button><div></div>
-  <button id="left">←</button><div></div><button id="right">→</button>
-  <div></div><button id="down">↓</button><div></div>
+  <div class="control-btns">
+    <div></div><button id="up">↑</button><div></div>
+    <button id="left">←</button><div></div><button id="right">→</button>
+    <div></div><button id="down">↓</button><div></div>
+  </div>
 </div>
 
 <script>
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
-const cols = 16;
-const rows = 16;
+const cols = 12;  // menos columnas = celdas más grandes
+const rows = 12;  // menos filas = celdas más grandes
 let canvasSize = Math.min(window.innerWidth-20, window.innerHeight*0.7);
 canvas.width = canvasSize;
 canvas.height = canvasSize;
@@ -115,10 +118,12 @@ function draw(){
     }
   }
   ctx.fillStyle="green"; ctx.fillRect(goal.x*size, goal.y*size, size, size);
-  if(playerImg.complete && playerImg.src) ctx.drawImage(playerImg, player.x*size, player.y*size, size, size);
-  else ctx.fillStyle="blue", ctx.fillRect(player.x*size, player.y*size, size, size);
-  if(chaserImg.complete && chaserImg.src) ctx.drawImage(chaserImg, chaser.x*size, chaser.y*size, size, size);
-  else ctx.fillStyle="red", ctx.fillRect(chaser.x*size, chaser.y*size, size, size);
+  let playerSize = size*1.8; // jugador más grande
+  let chaserSize = size*1.8; // perseguidor más grande
+  if(playerImg.complete && playerImg.src) ctx.drawImage(playerImg, player.x*size-(playerSize-size)/2, player.y*size-(playerSize-size)/2, playerSize, playerSize);
+  else ctx.fillStyle="blue", ctx.fillRect(player.x*size-(playerSize-size)/2, player.y*size-(playerSize-size)/2, playerSize, playerSize);
+  if(chaserImg.complete && chaserImg.src) ctx.drawImage(chaserImg, chaser.x*size-(chaserSize-size)/2, chaser.y*size-(chaserSize-size)/2, chaserSize, chaserSize);
+  else ctx.fillStyle="red", ctx.fillRect(chaser.x*size-(chaserSize-size)/2, chaser.y*size-(chaserSize-size)/2, chaserSize, chaserSize);
 }
 
 // Movimiento jugador
