--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Laberinto Móvil Mejorado</title>
+<title>Laberinto Móvil Optimizado</title>
 <style>
 body { margin:0; font-family:sans-serif; display:flex; flex-direction:column; align-items:center; background:#f0f0f0; }
+#upload { display:flex; flex-wrap:wrap; gap:10px; justify-content:center; margin:10px; }
 canvas { background:#eee; display:block; margin:10px 0; border:2px solid #333; }
-#info { font-size:18px; margin-bottom:5px; text-align:center; }
+#info { font-size:16px; margin-bottom:5px; text-align:center; }
 #controls { display:flex; flex-direction:column; align-items:center; gap:10px; margin-bottom:10px; }
-button { font-size:18px; padding:8px 12px; border-radius:6px; }
-.control-btns { display:grid; grid-template-columns: repeat(3, 60px); gap:5px; justify-content:center; }
-#upload { display:flex; flex-wrap:wrap; gap:10px; justify-content:center; }
+button { font-size:16px; padding:6px 10px; border-radius:6px; }
+.control-btns { display:grid; grid-template-columns: repeat(3, 50px); gap:5px; justify-content:center; }
 </style>
 </head>
 <body>
-<h1>Laberinto XL</h1>
+<h1>Laberinto Móvil</h1>
+
+<div id="upload">
+  <label>Jugador: <input type="file" id="playerUpload" accept="image/*"></label>
+  <label>Perseguidor: <input type="file" id="chaserUpload" accept="image/*"></label>
+</div>
 
 <div id="info">
   Tiempo: <span id="time">0</span> s | 
@@ -27,16 +32,12 @@ button { font-size:18px; padding:8px 12px; border-radius:6px; }
 <canvas id="game"></canvas>
 
 <div id="controls">
-  <div id="upload">
-    <label>Jugador: <input type="file" id="playerUpload" accept="image/*"></label>
-    <label>Perseguidor: <input type="file" id="chaserUpload" accept="image/*"></label>
-  </div>
   <div class="control-btns">
     <div></div><button id="up">↑</button><div></div>
     <button id="left">←</button><div></div><button id="right">→</button>
     <div></div><button id="down">↓</button><div></div>
   </div>
-  <div style="display:flex; gap:10px; justify-content:center;">
+  <div style="display:flex; gap:10px; justify-content:center; margin-top:5px;">
     <button id="startBtn">Start</button>
     <button id="resetBtn">Reset</button>
     <button id="regenBtn">Regenerar Laberinto</button>
@@ -44,11 +45,11 @@ button { font-size:18px; padding:8px 12px; border-radius:6px; }
 </div>
 
 <script>
+// Variables y configuración
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
-
-const cols = 12;  
-const rows = 12;  
+const cols = 12;
+const rows = 12;
 let canvasSize = Math.min(window.innerWidth-20, window.innerHeight*0.6);
 canvas.width = canvasSize;
 canvas.height = canvasSize;
@@ -63,13 +64,13 @@ let level = 1;
 let gameStarted = false;
 let loseCount = 0;
 let lives = 3;
-
 let chaserSpeed = 20;
 let chaserCounter = 0;
 
 let playerImg = new Image();
 let chaserImg = new Image();
 
+// Redimensionar canvas al cambiar tamaño
 window.addEventListener("resize", ()=>{
   canvasSize = Math.min(window.innerWidth-20, window.innerHeight*0.6);
   canvas.width = canvasSize;
@@ -119,10 +120,11 @@ function draw(){
     }
   }
   ctx.fillStyle="green"; ctx.fillRect(goal.x*size, goal.y*size, size, size);
-  
+
   // Jugadores tamaño igual a celda
   if(playerImg.complete && playerImg.src) ctx.drawImage(playerImg, player.x*size, player.y*size, size, size);
   else ctx.fillStyle="blue", ctx.fillRect(player.x*size, player.y*size, size, size);
+
   if(chaserImg.complete && chaserImg.src) ctx.drawImage(chaserImg, chaser.x*size, chaser.y*size, size, size);
   else ctx.fillStyle="red", ctx.fillRect(chaser.x*size, chaser.y*size, size, size);
 }
